cd/rio/traefik2-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rio-ingress-route
  namespace: rio-system
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`localhost`) && PathPrefix(`/rio`)
    kind: Rule
    services:
    - name: dashboard
      port: 80
